# Polymarket-Kalshi-btc-arbitrage-tool

./: Cargo.toml  LICENSE  README.md  install.sh  package.json  tsconfig.json
crates/pk-core/: Cargo.toml
crates/pk-core/src/: error.rs  kalshi.rs  lib.rs  polymarket.rs  types.rs
crates/pk-signal/: Cargo.toml
crates/pk-signal/src/: config.rs  engine.rs  lib.rs
crates/pk-signer/: Cargo.toml
crates/pk-signer/src/: error.rs  lib.rs  order.rs  wallet.rs
scripts/: build.js  setup.js
src/: api.rs  index.js  index.ts  main.rs  poller.rs  state.rs
src/__tests__/: signal.test.ts
src/clients/: kalshi.ts  polymarket.ts
src/routes/: index.ts
src/services/: poller.ts  signal.ts
src/types/: index.ts
src/utils/: config.ts  logger.ts
