[package]
name        = "pk-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Polymarket CLOB + Kalshi API clients and shared BTC market types"

[dependencies]
tokio.workspace        = true
serde.workspace        = true
serde_json.workspace   = true
anyhow.workspace       = true
thiserror.workspace    = true
reqwest.workspace      = true
tracing.workspace      = true
rust_decimal.workspace = true
chrono.workspace       = true
uuid.workspace         = true
